tests/rosetta/transpiler/Kotlin/2048.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:177:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((rev as MutableList<Any>)[x]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:240:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((col as MutableList<Any>)[y]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:296:21: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>> was expected
            board = m["board"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:297:21: error: type mismatch: inferred type is Any? but Int was expected
            score = m["score"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:298:21: error: type mismatch: inferred type is Any? but Boolean was expected
            moved = m["moved"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:302:21: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>> was expected
            board = m["board"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:303:21: error: type mismatch: inferred type is Any? but Int was expected
            score = m["score"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:304:21: error: type mismatch: inferred type is Any? but Boolean was expected
            moved = m["moved"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:308:21: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>> was expected
            board = m["board"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:309:21: error: type mismatch: inferred type is Any? but Int was expected
            score = m["score"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:310:21: error: type mismatch: inferred type is Any? but Boolean was expected
            moved = m["moved"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:314:21: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>> was expected
            board = m["board"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:315:21: error: type mismatch: inferred type is Any? but Int was expected
            score = m["score"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:316:21: error: type mismatch: inferred type is Any? but Boolean was expected
            moved = m["moved"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:323:21: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>> was expected
            board = r2["board"]
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:324:20: error: type mismatch: inferred type is Any? but Boolean was expected
            full = r2["full"]
                   ^
